# COTSensorData

./: .gitignore  BLEProtoConfig.cfg  CommProtoTwoConfig.cfg  ESPAbridgedConfig.cfg  ESPConfig.cfg  Makefile  README.md
Arduino/: readme.md
BLEClient/: BLEClient.ino  pushToESP.sh
BLEServer/: BLEServer.ino  pushToESP.sh
BTClient/: BTClient.ino  pushToESP.sh
BTServer/: BTServer.ino  pushToESP.sh
COTProject/: library.properties
Clicker/: CMakeLists.txt  DES.c  DES.h  aes.c  aes.h  ca821x_api.c  ca821x_bsp.c  ca821x_bsp.h  ca821x_irq.c  ca821x_irq.h  ca821x_spi.c  ca821x_spi.h  compile_commands.json  ecc.c  enc_supp.h  led.h  log.h  mac_ca821x.c  mac_ca821x.h  main.c  settings.json  utils.h
Clicker/build-My setup 3/: .ninja_deps  .ninja_log  CMakeCache.txt  SandboxLegacy.dbg  SandboxLegacy.dlt  SandboxLegacy.hex  SandboxLegacy.lst  SandboxLegacy_callertable.txt  build.ninja  cmake_install.cmake  compile_commands.json  toolchain.cmake
Clicker/build-My setup 3/.cmake/api/v1/reply/: cache-v2-02530c239463cbd3fd75.json  cache-v2-87679b9895d2de6d840f.json  cache-v2-b236ebf710cd831e03a0.json  cmakeFiles-v1-9a20a78681fd3b64dafa.json  cmakeFiles-v1-d73ba5b7f351c55c45eb.json  codemodel-v2-4018f97780ba78fcdc4a.json  codemodel-v2-5bcb9569067d75c3da9f.json  codemodel-v2-f6ba8414427ec317d56a.json  index-2022-10-12T00-43-07-0425.json  index-2022-10-18T01-28-12-0387.json  index-2022-10-23T17-34-37-0936.json  target-SandboxLegacy-Debug-9ca3a43d6a832ef3b8fd.json  target-SandboxLegacy-Debug-cce3c8c87b84f34cf9b4.json  target-SandboxLegacy-Debug-e07bc79d6a359f995561.json
Delivery/: readme.md
RPi/: Makefile
UARTBridge/: UARTBridge.ino
WifiClient/: WifiClient.ino  pushToESP.sh
WifiServer/: WifiServer.ino  pushToESP.sh
reports/: Final6LoWPAN-AES.csv  Final6LoWPAN-DES.csv  Final6LoWPAN-ECC.csv  Final6LoWPAN-None.csv  FinalBLECommProto-DES.csv  FinalBLECommProto-None.csv  FinalBLECommProto:AES.csv  FinalBLECommProto:ECC.csv  FinalBTTranceiver:None.csv  FinalBlueToothCommProto-AES.csv  FinalBlueToothCommProto-None.csv  FinalBlueToothCommProto:DES.csv  FinalBlueToothCommProto:ECC.csv  FinalWifiTranceiver-AES.csv  FinalWifiTranceiver-ECC.csv  FinalWifiTranceiver:DES.csv  (+1 more)
(+94 files in other folders)
